tests/ui/image/query/query_lod_err.stderr
error[E0277]: the trait bound `Image<f32, 4, 2, 0, 0, 1, 0, 4, ImageAccessUnknown>: HasQueryLevels` is not satisfied
   --> $DIR/query_lod_err.rs:13:21
    |
13  |     *output = image.query_lod(*sampler, glam::Vec2::new(0.0, 1.0));
    |                     ^^^^^^^^^ the trait `HasQueryLevels` is not implemented for `Image<f32, 4, 2, 0, 0, 1, 0, 4, ImageAccessUnknown>`
    |
    = help: the following other types implement trait `HasQueryLevels`:
              Image<SampledType, 0, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>
              Image<SampledType, 1, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>
              Image<SampledType, 2, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>
              Image<SampledType, 3, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>::query_lod`
   --> $SPIRV_STD_SRC/image.rs:927:15
    |
921 |     pub fn query_lod(
    |            --------- required by a bound in this associated function
...
927 |         Self: HasQueryLevels,
    |               ^^^^^^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>::query_lod`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
